--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,87 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.1"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/Users/tzehaotay/Desktop/EmoTech/DS/wandb/run-20240103_170623-eh88u4hp</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/tzehao/my-awesome-project/runs/eh88u4hp' target=\"_blank\">leafy-salad-3</a></strong> to <a href='https://wandb.ai/tzehao/my-awesome-project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/tzehao/my-awesome-project' target=\"_blank\">https://wandb.ai/tzehao/my-awesome-project</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/tzehao/my-awesome-project/runs/eh88u4hp' target=\"_blank\">https://wandb.ai/tzehao/my-awesome-project/runs/eh88u4hp</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/tzehao/my-awesome-project/runs/eh88u4hp?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
-      ],
-      "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x112397c50>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wandb\n",
     "import random\n",
     "\n",
+    "import subprocess\n",
+    "import sys\n",
+    "\n",
+    "def git_commit(commit_message):\n",
+    "    try:\n",
+    "        # Add all files to staging\n",
+    "        subprocess.check_call(['git', 'add', '.'])\n",
+    "\n",
+    "        # Commit\n",
+    "        subprocess.check_call(['git', 'commit', '-m', commit_message])\n",
+    "        print(\"Commit successful.\")\n",
+    "\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(\"An error occurred while trying to commit changes.\")\n",
+    "        sys.exit(1)\n",
     "# start a new wandb run to track this script\n",
     "wandb.init(\n",
     "    # set the wandb project where this run will be logged\n",
@@ -95,12 +36,14 @@
     "    \"dataset\": \"CIFAR-100\",\n",
     "    \"epochs\": 10,\n",
     "    }\n",
-    ")"
+    ")\n",
+    "git_commit(\"message\")\n",
+    "print(wandb)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +54,7 @@
        "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>acc</td><td>▁▃▅▆▆▆██</td></tr><tr><td>loss</td><td>▇██▄▄▃▁▂</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>acc</td><td>9.93647</td></tr><tr><td>loss</td><td>0.08498</td></tr></table><br/></div></div>"
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>acc</td><td>▁▄▆▇████</td></tr><tr><td>loss</td><td>█▆▂▁▂▁▁▂</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>acc</td><td>9.7589</td></tr><tr><td>loss</td><td>0.25757</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -123,7 +66,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">leafy-salad-3</strong> at: <a href='https://wandb.ai/tzehao/my-awesome-project/runs/eh88u4hp' target=\"_blank\">https://wandb.ai/tzehao/my-awesome-project/runs/eh88u4hp</a><br/>Synced 4 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">amber-water-5</strong> at: <a href='https://wandb.ai/tzehao/my-awesome-project/runs/sw4cqlhj' target=\"_blank\">https://wandb.ai/tzehao/my-awesome-project/runs/sw4cqlhj</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -135,7 +78,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20240103_170623-eh88u4hp/logs</code>"
+       "Find logs at: <code>./wandb/run-20240103_231851-sw4cqlhj/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
